force-app/main/default/objects/Skill_Assignment__c/Skill_Assignment__c.object-meta.xml
<CustomObject>
    <label>Skill Assignment</label>
    <nameField>
        <displayFormat>SkillA-{0000}</displayFormat>
        <label>Skill Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>