force-app/main/default/objects/Skill_Assignment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>SFL5__SFL5_Resource__c</referenceTo>
    <relationshipLabel>Skill Assignments</relationshipLabel>
    <relationshipName>Skill_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>