force-app/main/default/objects/Skill_Assignment__c/fields/Skill_Description__c.field-meta.xml
<CustomField>
    <fullName>Skill_Description__c</fullName>
    <formula>Skill__r.Solution__c &amp; &quot; &quot; &amp; Skill__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Description</label>
    <type>Text</type>
</CustomField>